# muon

./: .gitignore  meson.build
.github/workflows/: ubuntu.yml
doc/website/ci/: index.html
include/: args.h  toolchains.h
include/datastructures/: stack.h
include/functions/kernel/: dependency.h
include/functions/kernel/dependency/: appleframeworks.h  boost.h  curses.h  known.h  threads.h
include/lang/: analyze.h  object.h
src/: args.c  cmd_test.c  main.c  meson.build  options.c  toolchains.c
src/backend/: common_args.c  xcode.c
src/backend/ninja/: build_target.c  rules.c
src/datastructures/: stack.c
src/formats/: ansi.c
src/functions/: build_target.c  compiler.c  dependency.c
src/functions/kernel/: build_target.c  dependency.c  subproject.c
src/functions/kernel/dependency/: appleframeworks.c  boost.c  curses.c  known.c  threads.c
src/functions/modules/: curl.c  subprojects.c
src/lang/: eval.c  lexer.c  object.c  parser.c  string.c  typecheck.c  vm.c  workspace.c
src/platform/: filesystem.c
src/platform/posix/: rpath_fixer.c
src/script/: meson.build
src/script/modules/: gnome.meson  wayland.meson
src/script/runtime/: toolchains.meson
subprojects/: meson-tests.wrap
tests/fuzz/: harness.c  load_dump.meson  meson.build
tests/project/: meson.build
tests/project/muon/subproject_promotion/: meson.build
tests/project/muon/subproject_promotion/subprojects/sub1/: meson.build
tests/project/muon/subproject_promotion/subprojects/sub2/: meson.build
tests/project/muon/vala/: hello.vala  meson.build
tests/project/muon/wayland/: meson.build  wayland_demo.c
tools/ci/: alpine.sh
